--- a/Seance1.html
+++ b/Seance1.html
@@ -948,7 +948,7 @@ res1   = xmlSapply(xmltop,xmlValue) # appliquer une fonction
 <section id="exercice-20mn-1" class="slide level2" data-background="#fff">
 <h2><span class="green">Exercice (20mn)</span></h2>
 <h4>
-<span class="green">Construire à partir du fichier <a href="../data/exo3.xml">./data/exo3.xml</a> une data.frame contenant les variables suivantes :</span>
+<span class="green">Construire à partir du fichier <a href="./data/exo3.xml">./data/exo3.xml</a> une data.frame contenant les variables suivantes :</span>
 </h4>
 <h4>
 <span class="green"> ‘id’,‘lat’,‘long’,‘nbBikes’,‘nbEmptyDocks’</span>
