--- a/Seance6.html
+++ b/Seance6.html
@@ -693,12 +693,22 @@ Calculer à partir des données communales contenues dans le fichier exo6_data.c
 <p>
 Joindre les deux tables et vérifier ques des données sont associés à chaque départements.
 </p>
+<p>
+Exporter les données en geojson
+</p>
+</section>
+<section id="exercice-1" class="slide level2">
+<h2>Exercice</h2>
+<p>
+Calculer et afficher les voronois associés aux stations velib de new-york.
+</p>
 </section>
 <section id="sources" class="slide level2">
 <h2>Sources</h2>
 <ul>
 <li>
-<li>
+Thimothé Giraud / Kim antunez
+</ul>
 </section>
     </div>
   </div>
